Added method for go back button

--- a/src/contactbookfrog/UserInterface.form
+++ b/src/contactbookfrog/UserInterface.form
@@ -563,6 +563,9 @@
               <Dimension value="[90, 40]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="go_back_buttonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.Box$Filler" name="filler3">
           <Properties>
